<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LAMPER</string>


    <string name="call_uber">Call LampeR</string>
    <string name="UberBlack">4 people</string>
    <string name="UberXl">3 people</string>
    <string name="UberX" tools:ignore="TypographyFractions">1/2 people</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="working">Working</string>
    <string name="destination">dDestination</string>
    <string name="picked_customer">Picked customer</string>
    <string name="car">Car</string>
    <string name="balance">Payment</string>
    <string name="payout">Payout</string>
    <string name="pay_here">Pay Here</string>
    <string name="from_to">From - To</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="matric_card">Matric Card</string>
    <string name="phone_number">Phone</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_plate">Car Plate</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="customer">Customer</string>
    <string name="driver">Driver</string>
    <string name="getting_driver">Getting Your Driver ....</string>
    <string name="looking_driver">Looking For Your Driver…</string>
    <string name="driver_here">Driver Here</string>
    <string name="driver_found">Driver Found</string>
    <string name="drive_complete">Driver Completed</string>
    <string name="not_approved">Your Account Has Not Been Approved</string>
    <string name="no_driver_near_you">No driver has been found near you</string>

    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="account_prompt">Choose a Type</string>
    <string-array name="account_array">
        <item>Customer</item>
        <item>Driver</item>
    </string-array>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>


    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA4HJGkAOGwfV8yEaVtWasMKhuK7UVkecg</string>


    <string name="action_example">Example action</string>
    <string name="style_json">
  [
    {
      \"featureType\": \"all\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#242f3e\"
        }
      ]
    },
    {
      \"featureType\": \"all\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -80
        }
      ]
    },
    {
      \"featureType\": \"administrative\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"administrative.locality\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#263c3f\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#6b9a76\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#2b3544\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#9ca5b3\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#1f2835\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#f3d19c\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"transit\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#2f3948\"
        }
      ]
    },
    {
      \"featureType\": \"transit.station\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#17263c\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#515c6d\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -20
        }
      ]
    }
  ]
  </string>
    <string name="ride_name">name:</string>
    <string name="ride_phone">Phone:</string>


</resources>
